// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table Tests render empty table 1`] = `
<div
  className="table-container"
>
  <table
    role="table"
  >
    <thead>
      <tr />
    </thead>
    <tbody
      onScroll={[Function]}
      role="rowgroup"
    >
      <tr
        className="msg-placeholder"
      >
        <td
          className="msg-error"
        >
          Information not found
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Table Tests render table with data 1`] = `
<div
  className="table-container"
>
  <table
    role="table"
  >
    <thead>
      <tr
        role="row"
      >
        <th
          colSpan={1}
          role="columnheader"
        >
          <div>
            Col1
          </div>
        </th>
        <th
          colSpan={1}
          role="columnheader"
        >
          <div>
            Col2
          </div>
        </th>
      </tr>
    </thead>
    <tbody
      onScroll={[Function]}
      role="rowgroup"
    >
      <tr
        onClick={[Function]}
        role="row"
      >
        <td
          role="cell"
        >
          Test1-1
        </td>
        <td
          role="cell"
        >
          Test1-2
        </td>
      </tr>
      <tr
        onClick={[Function]}
        role="row"
      >
        <td
          role="cell"
        >
          Test2-1
        </td>
        <td
          role="cell"
        >
          Test2-2
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Table Tests render table with error 1`] = `
<div
  className="table-container"
>
  <table
    role="table"
  >
    <thead>
      <tr />
    </thead>
    <tbody
      onScroll={[Function]}
      role="rowgroup"
    >
      <tr
        className="msg-placeholder"
      >
        <td
          className="msg-error"
        >
          Information not found
        </td>
      </tr>
      <tr
        className="msg-placeholder"
      >
        <td
          className="msg-error"
        >
          Something went wrong
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Table Tests render table with loading 1`] = `
<div
  className="table-container"
>
  <table
    role="table"
  >
    <thead>
      <tr />
    </thead>
    <tbody
      onScroll={[Function]}
      role="rowgroup"
    >
      <tr
        className="loader-placeholder"
      >
        <td>
          <svg
            height="24"
            viewBox="0 0 40 24"
            width="80"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="40"
              cy="12"
              fill="currentColor"
              r="0"
            >
              <animate
                attributeName="r"
                begin=".67"
                calcMode="spline"
                dur="1.5s"
                keySplines="0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8"
                repeatCount="indefinite"
                values="0;6;0;0"
              />
            </circle>
            <circle
              cx="20"
              cy="12"
              fill="currentColor"
              r="0"
            >
              <animate
                attributeName="r"
                begin=".33"
                calcMode="spline"
                dur="1.5s"
                keySplines="0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8"
                repeatCount="indefinite"
                values="0;6;0;0"
              />
            </circle>
            <circle
              cx="0"
              cy="12"
              fill="currentColor"
              r="0"
            >
              <animate
                attributeName="r"
                begin="0"
                calcMode="spline"
                dur="1.5s"
                keySplines="0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8;0.2 0.2 0.4 0.8"
                repeatCount="indefinite"
                values="0;6;0;0"
              />
            </circle>
          </svg>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
